--- a/AV1.ipynb
+++ b/AV1.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trabalho referente a AV1 - Matemática para Computação\n",
+    "# Banco de Dados Equipe 10\n",
+    "\n",
+    "Equipe:\n",
+    " - Igor Souza Cruz 2111597\n",
+    " - Lissandra Martins Moura 2218019\n",
+    " - Jeosafá Ferreira Do Nascimento 2217282\n",
+    " - Nicolas Freire Santiago 2218668\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,6 +24,13 @@
     "import pandas as pd\n",
     "import seaborn as srn\n",
     "import statistics as sts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Importação de dados CSV referente a alunos, dengue e ônibus:"
    ]
   },
   {
@@ -21,6 +43,21 @@
     "alunos = pd.read_csv(\"alunos.csv\", sep=\";\")\n",
     "dengue = pd.read_csv(\"dengue.csv\", sep=\";\")\n",
     "onibus = pd.read_csv(\"onibus.csv\", sep=\";\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Realização da análise dos dados obtidos e tratamento:\n",
+    "\n",
+    "Problemas observados:\n",
+    "\n",
+    "- O nome da coluna \"Nome de Mae\" e \"Nome do Pai\" estão invertidas;\n",
+    "- Datas em formatações diversas, porém serão deixadas como tal por representar dados que não devem ser alterados;\n",
+    "- A coluna 'Sexo' possui diferentes siglas para se referir ao mesmo objeto;\n",
+    "- 'Nome', 'Nome de Mae' e 'Nome do Pai' aparecem escritos de forma incompleta ou errados, porém serão usados como parametros para identificar igualdade.\n",
+    "- A coluna 'ID' aprensa IDs diferentes em diferentes tabelas paras os mesmos indivíduos.\n"
    ]
   },
   {
@@ -436,6 +473,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisando dados dos alunos:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -464,7 +508,6 @@
     }
    ],
    "source": [
-    "#Analisando colunas dos dados de Alunos\n",
     "#Nome\n",
     "agrupado = alunos.groupby(['Nome']).size()\n",
     "agrupado\n",
@@ -589,6 +632,13 @@
    "source": [
     "#Contamos valores NAN\n",
     "alunos.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aparentemente mesmo com nomes repetidos os nomes dos pais não se repetem, ou seja, são pessoas diferentes!"
    ]
   },
   {
@@ -752,9 +802,14 @@
     }
    ],
    "source": [
-    "alunos[alunos.duplicated(['Nome'], keep=False)]\n",
-    "#Aparentemente mesmo com nomes repetidos os nomes dos pais não se repetem, ou seja, são pessoas diferentes\n",
-    "#Também observamos que o nome da coluna \"Nome de Mae\" e \"Nome do Pai\" estão invertidas"
+    "alunos[alunos.duplicated(['Nome'], keep=False)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Corrigindo nome de coluna."
    ]
   },
   {
@@ -863,10 +918,16 @@
     }
    ],
    "source": [
-    "#Corrigindo nome de coluna\n",
     "alunos.columns = ['ID','Nome','Nome do Pai','Nome da Mae','Sexo','Data de Nascimento']\n",
     "#verificando\n",
     "alunos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisando dados de Dengue:"
    ]
   },
   {
@@ -898,7 +959,6 @@
     }
    ],
    "source": [
-    "#Analisando colunas dos dados de Dengue\n",
     "agrupado = dengue.groupby(['Nome']).size()\n",
     "agrupado\n",
     "#207 de 212 valores repetidos ou vazios"
@@ -1023,6 +1083,13 @@
    "source": [
     "#Contamos valores NAN\n",
     "dengue.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aparentemente mesmo com nomes repetidos os nomes dos pais não se repetem, ou seja, são pessoas diferentes."
    ]
   },
   {
@@ -1161,9 +1228,14 @@
     }
    ],
    "source": [
-    "dengue[dengue.duplicated(['Nome'], keep=False)]\n",
-    "#Aparentemente mesmo com nomes repetidos os nomes dos pais não se repetem, ou seja, são pessoas diferentes\n",
-    "#Também observamos que o nome da coluna \"Nome de Mae\" e \"Nome do Pai\" estão invertidas"
+    "dengue[dengue.duplicated(['Nome'], keep=False)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Corrigindo nome de coluna:"
    ]
   },
   {
@@ -1278,10 +1350,16 @@
     }
    ],
    "source": [
-    "#Corrigindo nome de coluna\n",
     "dengue.columns = ['ID','Nome','Nome do Pai','Nome da Mae','Sexo','Data de Nascimento','Data da Dengue']\n",
     "#verificando\n",
     "dengue.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisando colunas dos dados de Ônibus"
    ]
   },
   {
@@ -1313,7 +1391,6 @@
     }
    ],
    "source": [
-    "#Analisando colunas dos dados de Onibus\n",
     "#Nome\n",
     "agrupado = onibus.groupby(['Nome']).size()\n",
     "agrupado\n",
@@ -1356,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1454,7 @@
        "Length: 256, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1479,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,8 +1490,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Padronizar os valores da coluna 'Sexo':"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1512,13 +1596,12 @@
        "4  RAIMUNDA SOCORRO HERMINIO    F  18-11-1998 00:00:00  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#padronizar de acordo com dominio\n",
     "alunos.loc[alunos['Sexo'] == 'f', 'Sexo'] = \"F\"\n",
     "alunos.loc[alunos['Sexo'] == 'm', 'Sexo'] = \"M\"\n",
     "alunos.head()"
@@ -1526,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1637,16 +1720,221 @@
        "4                                     010, 152  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#padronizar de acordo com dominio\n",
     "onibus.loc[onibus['Sexo'] == 'H', 'Sexo'] = \"M\"\n",
     "onibus.loc[alunos['Sexo'] == 'M', 'Sexo'] = \"F\"\n",
     "onibus.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Realizando a combinação dos indivídos em diferentes bancos de dados seguindo orientações:\n",
+    "\n",
+    "A prefeitura por meio da coleta de dados de seus sistemas, possui alguns conjuntos de dados e gostaria de explorá-los para apoiar as tomadas de decisão do prefeito e seus secretários. A base de dados da prefeitura conta com dados sobre as áreas da Saúde (dados de cidadãos que tiverem dengue), Mobilidade (dados de cidadãos que andam de ônibus) e Educação (dados de cidadãos matriculados em escolas), essas informações estão em três  arquivos Excel (.csv). Como cientista de dados você deverá fazer:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 1) Relatório Educação: Informar nome, data de nascimento e id dos cidadãos de XPTO que frequentaram a escola, menos os cidadãos que tiveram dengue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_x</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Nome do Pai_x</th>\n",
+       "      <th>Nome da Mae</th>\n",
+       "      <th>Sexo_x</th>\n",
+       "      <th>Data de Nascimento_x</th>\n",
+       "      <th>ID_y</th>\n",
+       "      <th>Nome do Pai_y</th>\n",
+       "      <th>Sexo_y</th>\n",
+       "      <th>Data de Nascimento_y</th>\n",
+       "      <th>Data da Dengue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>LEONARDA SILVA BARBOSA</td>\n",
+       "      <td>FRAOCCSCO FERREIJA BARBOSV</td>\n",
+       "      <td>RAIMARA SILVA ARAUJO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>16-8-2007 00:00:00</td>\n",
+       "      <td>24</td>\n",
+       "      <td>FRANCISCE FERREIRA BARBZSA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>16/8/2077</td>\n",
+       "      <td>27/9/2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26</td>\n",
+       "      <td>FRANCISCA AURILANE HOLANDA</td>\n",
+       "      <td>ALONCO ARAUJO HOLANDA</td>\n",
+       "      <td>MARIA AURILANE ARAUJO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6-2-2314 00:00:00</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ALONCO A H</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6/2/2014</td>\n",
+       "      <td>13/2/2079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36</td>\n",
+       "      <td>WALTER PERREIRA FERREIRA</td>\n",
+       "      <td>ANTONIO OLIVEIRA FERREIRA</td>\n",
+       "      <td>ANTONIA PERREIRA CHAVES</td>\n",
+       "      <td>M</td>\n",
+       "      <td>30-3-2007 00:00:00</td>\n",
+       "      <td>183</td>\n",
+       "      <td>ANTONIO</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35/7/2025</td>\n",
+       "      <td>9/5/2046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>MARIA LOUREIRO TEIXEIRA</td>\n",
+       "      <td>FRANCISCO V T</td>\n",
+       "      <td>LUZIA LOUREIRO ARAUJO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>21-3-9397 00:00:00</td>\n",
+       "      <td>128</td>\n",
+       "      <td>FRANCISCO V T</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24/3/2997</td>\n",
+       "      <td>13/4/2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>51</td>\n",
+       "      <td>JOSIANY IVONILDE SOUSA</td>\n",
+       "      <td>RAIMUNDO</td>\n",
+       "      <td>ELISAGELA IVONILDE NAVEGANTES</td>\n",
+       "      <td>M</td>\n",
+       "      <td>28-11-1695 00:00:00</td>\n",
+       "      <td>148</td>\n",
+       "      <td>RAIMUNDO</td>\n",
+       "      <td>M</td>\n",
+       "      <td>22/21/6981</td>\n",
+       "      <td>14/16/2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>69</td>\n",
+       "      <td>ANAIDE SANTOS SILVA</td>\n",
+       "      <td>CICERO FERREIRF SILVA</td>\n",
+       "      <td>REGINA SANTOS LOPES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4-2-4097 00:00:00</td>\n",
+       "      <td>57</td>\n",
+       "      <td>CICERO FERREIRA SILVA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>7/0/2108</td>\n",
+       "      <td>22/8/2413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>148</td>\n",
+       "      <td>ALINE ARAUJO GILBERTO</td>\n",
+       "      <td>RAIMUNDO CARLOS GILBERTO</td>\n",
+       "      <td>RAIMUNDA ARAUJO LAURIANO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>00-0-1997 00:00:00</td>\n",
+       "      <td>186</td>\n",
+       "      <td>RAIMUNDO C G</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20/5/1991</td>\n",
+       "      <td>3/11/8001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_x                        Nome               Nome do Pai_x  \\\n",
+       "0    11      LEONARDA SILVA BARBOSA  FRAOCCSCO FERREIJA BARBOSV   \n",
+       "1    26  FRANCISCA AURILANE HOLANDA       ALONCO ARAUJO HOLANDA   \n",
+       "2    36    WALTER PERREIRA FERREIRA   ANTONIO OLIVEIRA FERREIRA   \n",
+       "3    48     MARIA LOUREIRO TEIXEIRA               FRANCISCO V T   \n",
+       "4    51      JOSIANY IVONILDE SOUSA                    RAIMUNDO   \n",
+       "5    69         ANAIDE SANTOS SILVA       CICERO FERREIRF SILVA   \n",
+       "6   148       ALINE ARAUJO GILBERTO    RAIMUNDO CARLOS GILBERTO   \n",
+       "\n",
+       "                     Nome da Mae Sexo_x Data de Nascimento_x  ID_y  \\\n",
+       "0           RAIMARA SILVA ARAUJO      F   16-8-2007 00:00:00    24   \n",
+       "1          MARIA AURILANE ARAUJO      F    6-2-2314 00:00:00    20   \n",
+       "2        ANTONIA PERREIRA CHAVES      M   30-3-2007 00:00:00   183   \n",
+       "3          LUZIA LOUREIRO ARAUJO      F   21-3-9397 00:00:00   128   \n",
+       "4  ELISAGELA IVONILDE NAVEGANTES      M  28-11-1695 00:00:00   148   \n",
+       "5            REGINA SANTOS LOPES      F    4-2-4097 00:00:00    57   \n",
+       "6       RAIMUNDA ARAUJO LAURIANO      F   00-0-1997 00:00:00   186   \n",
+       "\n",
+       "                Nome do Pai_y Sexo_y Data de Nascimento_y Data da Dengue  \n",
+       "0  FRANCISCE FERREIRA BARBZSA      F            16/8/2077      27/9/2016  \n",
+       "1                  ALONCO A H      F             6/2/2014      13/2/2079  \n",
+       "2                     ANTONIO      M            35/7/2025       9/5/2046  \n",
+       "3               FRANCISCO V T      F            24/3/2997      13/4/2008  \n",
+       "4                    RAIMUNDO      M           22/21/6981     14/16/2005  \n",
+       "5       CICERO FERREIRA SILVA      F             7/0/2108      22/8/2413  \n",
+       "6                RAIMUNDO C G      F            20/5/1991      3/11/8001  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combina = pd.merge(alunos,dengue, on=['Nome','Nome da Mae'], how='inner')\n",
+    "combina"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combina.to_csv('combina.csv', index=False)"
    ]
   }
  ],
