Metodologia para criar conjuntos

--- a/AV1.ipynb
+++ b/AV1.ipynb
@@ -1744,7 +1744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " 1) Relatório Educação: Informar nome, data de nascimento e id dos cidadãos de XPTO que frequentaram a escola, menos os cidadãos que tiveram dengue."
+    "#  1) Relatório Educação: Informar nome, data de nascimento e id dos cidadãos de XPTO que frequentaram a escola, menos os cidadãos que tiveram dengue."
    ]
   },
   {
@@ -1926,6 +1926,185 @@
    "source": [
     "combina = pd.merge(alunos,dengue, on=['Nome','Nome da Mae'], how='inner')\n",
     "combina"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Nome do Pai</th>\n",
+       "      <th>Nome da Mae</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Data de Nascimento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>FRANCISCA SALES LIMA</td>\n",
+       "      <td>ELISEU CASTRO LIMA</td>\n",
+       "      <td>SANDRA SALES CHAGAS</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10-7-1997 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>DARIO MELO CELISMAN</td>\n",
+       "      <td>JOAO SILVA CELISMAN</td>\n",
+       "      <td>MARIA MELO MARLETE</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24-3-2022 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ANTONIA SILVA BARBOSA</td>\n",
+       "      <td>RAIMUNDO</td>\n",
+       "      <td>MARIA SILVA GIRAO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>68-9-2009 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>SAMARA SANTOS MONTEIRO</td>\n",
+       "      <td>JOSE</td>\n",
+       "      <td>MARIA SANTOS LIDUINA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>25-4-1999 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>FRANCISCO ALMEIDA SOUSA</td>\n",
+       "      <td>RAIMUNDA SOCORRO HERMINIO</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18-11-1998 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>284</td>\n",
+       "      <td>MARIA L R</td>\n",
+       "      <td>FRANCISCO NASCIMENTO ROBERTO</td>\n",
+       "      <td>ELIZETH LUCIA SILVA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9-0-2008 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>285</td>\n",
+       "      <td>ANGELA SILVA SOUSA</td>\n",
+       "      <td>RAIMUNDO TEIXEIRA SOUSA</td>\n",
+       "      <td>ALEZABETA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>15-2-2007 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>286</td>\n",
+       "      <td>BRUNA GRACAS OLIVEIRA</td>\n",
+       "      <td>FRANCISCO RODUIGUES OLIGGIRA</td>\n",
+       "      <td>MARIA GRACAS DLVES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1-6-5000 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>287</td>\n",
+       "      <td>ANTONIO RODRIGUES CASTRO</td>\n",
+       "      <td>MOACIR LIMA CASTRO</td>\n",
+       "      <td>MARIA RODRIGUES FELIX</td>\n",
+       "      <td>M</td>\n",
+       "      <td>8-0-6012 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>288</td>\n",
+       "      <td>ANA RAMOS FELIPE</td>\n",
+       "      <td>RAIMUNDO GOMES FELIPE</td>\n",
+       "      <td>ANA RAMOS ROCHA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>17-8-6007 00:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>282 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID                      Nome                   Nome do Pai  \\\n",
+       "0      0      FRANCISCA SALES LIMA            ELISEU CASTRO LIMA   \n",
+       "1      1       DARIO MELO CELISMAN           JOAO SILVA CELISMAN   \n",
+       "2      2     ANTONIA SILVA BARBOSA                      RAIMUNDO   \n",
+       "3      3    SAMARA SANTOS MONTEIRO                          JOSE   \n",
+       "4      4                   JESSICA       FRANCISCO ALMEIDA SOUSA   \n",
+       "..   ...                       ...                           ...   \n",
+       "284  284                 MARIA L R  FRANCISCO NASCIMENTO ROBERTO   \n",
+       "285  285        ANGELA SILVA SOUSA       RAIMUNDO TEIXEIRA SOUSA   \n",
+       "286  286     BRUNA GRACAS OLIVEIRA  FRANCISCO RODUIGUES OLIGGIRA   \n",
+       "287  287  ANTONIO RODRIGUES CASTRO            MOACIR LIMA CASTRO   \n",
+       "288  288          ANA RAMOS FELIPE         RAIMUNDO GOMES FELIPE   \n",
+       "\n",
+       "                   Nome da Mae Sexo   Data de Nascimento  \n",
+       "0          SANDRA SALES CHAGAS    F   10-7-1997 00:00:00  \n",
+       "1           MARIA MELO MARLETE    M   24-3-2022 00:00:00  \n",
+       "2            MARIA SILVA GIRAO    F   68-9-2009 00:00:00  \n",
+       "3         MARIA SANTOS LIDUINA    F   25-4-1999 00:00:00  \n",
+       "4    RAIMUNDA SOCORRO HERMINIO    F  18-11-1998 00:00:00  \n",
+       "..                         ...  ...                  ...  \n",
+       "284        ELIZETH LUCIA SILVA    F    9-0-2008 00:00:00  \n",
+       "285                  ALEZABETA    F   15-2-2007 00:00:00  \n",
+       "286         MARIA GRACAS DLVES    F    1-6-5000 00:00:00  \n",
+       "287      MARIA RODRIGUES FELIX    M    8-0-6012 00:00:00  \n",
+       "288            ANA RAMOS ROCHA    F   17-8-6007 00:00:00  \n",
+       "\n",
+       "[282 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = alunos[~alunos['Nome da Mae'].isin(combina['Nome da Mae'])]\n",
+    "test"
    ]
   },
   {
